<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".login_register.LoginActivity.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/textview_background"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/login_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_motto"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/textview_background"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/login_motto"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/login_title"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background1"
        android:drawableLeft="@drawable/login_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_regular"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:textColorHint="#D1CDCD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_motto" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background1"
        android:drawableLeft="@drawable/login_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_regular"
        android:hint="@string/password_login"
        android:imeActionId="@+id/login"
        android:inputType="textPassword"
        android:textColorHint="#D1CDCD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/email_login"
        app:layout_constraintStart_toStartOf="@+id/email_login"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <Button
        android:id="@+id/login_to_foodzee"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background1"
        android:fontFamily="@font/sf_pro_display_regular"
        android:onClick="Save"
        android:text="@string/login_to_foodzee_signup"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/password_login"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_to_foodzee" />

    <TextView
        android:id="@+id/newuser"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/newuser"
        app:layout_constraintBottom_toBottomOf="@+id/signup_screen"
        app:layout_constraintEnd_toStartOf="@+id/signup_screen"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_screen"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signup_screen"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="144dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/signup_screen"
        android:textColor="#DAFA0303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_screen"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg_login_screen" />

</androidx.constraintlayout.widget.ConstraintLayout>
