<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".login_register.LoginActivity.LoginActivity">

    <ImageButton
        android:id="@+id/backtologin"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/textview_background"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/signup_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_signup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background1"
        android:drawableLeft="@drawable/login_username"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_regular"
        android:gravity="center_vertical"
        android:hint="@string/username_signup"
        android:inputType="textEmailAddress"
        android:textColorHint="#D1CDCD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <EditText
        android:id="@+id/email_signup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background1"
        android:drawableLeft="@drawable/login_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_regular"
        android:hint="@string/email_signup"
        android:inputType="textEmailAddress"
        android:textColorHint="#D1CDCD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/username_signup"
        app:layout_constraintStart_toStartOf="@+id/username_signup"
        app:layout_constraintTop_toBottomOf="@+id/username_signup" />

    <EditText
        android:id="@+id/mobilenumber_signup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background1"
        android:drawableLeft="@drawable/login_mobilenumber"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_regular"
        android:hint="@string/mobilenumber_signup"
        android:inputType="phone"
        android:textColorHint="#D1CDCD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/email_signup"
        app:layout_constraintStart_toStartOf="@+id/email_signup"
        app:layout_constraintTop_toBottomOf="@+id/email_signup" />

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background1"
        android:drawableLeft="@drawable/login_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_regular"
        android:hint="@string/password_signup"
        android:inputType="textPassword"
        android:textColorHint="#D1CDCD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/mobilenumber_signup"
        app:layout_constraintStart_toStartOf="@+id/mobilenumber_signup"
        app:layout_constraintTop_toBottomOf="@+id/mobilenumber_signup" />

    <EditText
        android:id="@+id/confirmpassword_signup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background1"
        android:drawableLeft="@drawable/login_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_regular"
        android:hint="@string/confirmpassword_signup"
        android:inputType="textPassword"
        android:textColorHint="#D1CDCD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/password_signup"
        app:layout_constraintStart_toStartOf="@+id/password_signup"
        app:layout_constraintTop_toBottomOf="@+id/password_signup" />

    <Button
        android:id="@+id/signup_to_foodzee"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background1"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/signup_to_foodzee_signup"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/confirmpassword_signup"
        app:layout_constraintStart_toStartOf="@+id/confirmpassword_signup"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword_signup" />

    <TextView
        android:id="@+id/currentuser"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/currentuser"
        app:layout_constraintBottom_toBottomOf="@+id/login_screen"
        app:layout_constraintEnd_toStartOf="@+id/login_screen"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_screen"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login_screen"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="132dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/login_screen"
        android:textColor="#DAFA0303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_to_foodzee" />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentuser"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg_login_screen" />


</androidx.constraintlayout.widget.ConstraintLayout>
