<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".login_register.ForgotPasswordActivity">

    <ImageButton
        android:id="@+id/backtologin"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#6AFFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_forgotpassword_screen" />

    <TextView
        android:id="@+id/just_a_few_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/just_a_few_minutes"
        android:textColor="#222222"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/details_for_password_reset"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:gravity="center"
        android:text="@string/details_for_password_reset"
        app:layout_constraintEnd_toEndOf="@+id/just_a_few_minutes"
        app:layout_constraintStart_toStartOf="@+id/just_a_few_minutes"
        app:layout_constraintTop_toBottomOf="@+id/just_a_few_minutes" />

    <EditText
        android:id="@+id/email_forgot_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_background1"
        android:drawableLeft="@drawable/login_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/sf_pro_display_regular"
        android:hint="@string/email_forgot_password"
        android:inputType="textEmailAddress"
        android:textColorHint="#D1CDCD"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_for_password_reset"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/didntreceiveemail"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/didntreceiveemail"
        app:layout_constraintBottom_toBottomOf="@+id/resend_email"
        app:layout_constraintEnd_toStartOf="@+id/resend_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resend_email"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="104dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/resend_email"
        android:textColor="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_forgot_password" />

    <Button
        android:id="@+id/submit_forgot_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background2"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/submit_forgot_password"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email_forgot_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/didntreceiveemail"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>